# 2021_aoc

./: pyproject.toml
2021_aoc/01_SonarSweep/: 01_SonarSweep.py
aoc_2021/d02_Dive/: 02_Dive.py
aoc_2021/d03_BinaryDiagnostic/part1/: d03_BinaryDiagnostic_1.py
aoc_2021/d03_BinaryDiagnostic/part2/: d03_BinaryDiagnostic_2.py
aoc_2021/d04_GiantSquid/: d04_GiantSquid_1.py  d04_GiantSquid_2.py
aoc_2021/d05_HydrothermalVenture/: d05_HydrothermalVenture_1.py  d05_HydrothermalVenture_2.py
aoc_2021/d06_Lanternfish/: d06_Lanternfish_1.py  d06_Lanternfish_2.py
aoc_2021/d07_Treachery_of_Whales/: d07_Treachery_of_Whales.py
aoc_2021/d08_SevenSegmentSearch/: SevenSegmentSearch.py
tests/: test_03.py  test_04.py  test_05.py  test_06_1.py  test_06_2.py  test_07.py  test_08.py  test_2021_aoc.py
